// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots renderers/TimeFilter default 1`] = `
<div
  style={
    Object {
      "width": "600px",
    }
  }
>
  <div
    className="canvasTimeFilter"
  >
    <div
      className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiSuperDatePicker__flexWrapper euiSuperDatePicker__flexWrapper--noUpdateButton"
    >
      <div
        className="euiFlexItem"
      >
        <div
          className="euiFormControlLayout euiFormControlLayout--group euiSuperDatePicker"
        >
          <div
            className="euiPopover euiPopover--anchorDownLeft"
          >
            <div
              className="euiPopover__anchor euiQuickSelectPopover__anchor"
            >
              <button
                aria-label="Date quick select"
                className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiFormControlLayout__prepend"
                data-test-subj="superDatePickerToggleQuickMenuButton"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                >
                  <span
                    className="euiButtonContent__icon"
                    color="inherit"
                    data-euiicon-type="arrowDown"
                    size="s"
                  >
                    
                  </span>
                  <span
                    className="euiButtonEmpty__text euiQuickSelectPopover__buttonText"
                  >
                    <span
                      data-euiicon-type="calendar"
                    >
                      
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            className="euiFormControlLayout__childrenWrapper"
          >
            <div
              className="euiDatePickerRange euiDatePickerRange--inGroup"
            >
              <button
                className="euiSuperDatePicker__prettyFormat"
                data-test-subj="superDatePickerShowDatesButton"
                disabled={false}
                onClick={[Function]}
              >
                Last 1 year
              </button>
            </div>
          </div>
          <div
            className="euiPopover euiPopover--anchorDownCenter"
          >
            <div
              className="euiPopover__anchor"
            >
              <button
                className="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiAutoRefreshButton euiFormControlLayout__append euiFormControlLayout__append"
                disabled={false}
                onClick={[Function]}
                title="Auto refresh is on and set to 1 second"
                type="button"
              >
                <span
                  className="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    className="euiButtonContent__icon"
                    color="inherit"
                    data-euiicon-type="timeRefresh"
                    size="m"
                  >
                    
                  </span>
                  <span
                    className="euiButtonEmpty__text"
                  >
                    1 s
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots renderers/TimeFilter with absolute time bounds 1`] = `
<div
  style={
    Object {
      "width": "600px",
    }
  }
>
  <div
    className="canvasTimeFilter"
  >
    <div
      className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiSuperDatePicker__flexWrapper euiSuperDatePicker__flexWrapper--noUpdateButton"
    >
      <div
        className="euiFlexItem"
      >
        <div
          className="euiFormControlLayout euiFormControlLayout--group euiSuperDatePicker"
        >
          <div
            className="euiPopover euiPopover--anchorDownLeft"
          >
            <div
              className="euiPopover__anchor euiQuickSelectPopover__anchor"
            >
              <button
                aria-label="Date quick select"
                className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiFormControlLayout__prepend"
                data-test-subj="superDatePickerToggleQuickMenuButton"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                >
                  <span
                    className="euiButtonContent__icon"
                    color="inherit"
                    data-euiicon-type="arrowDown"
                    size="s"
                  >
                    
                  </span>
                  <span
                    className="euiButtonEmpty__text euiQuickSelectPopover__buttonText"
                  >
                    <span
                      data-euiicon-type="calendar"
                    >
                      
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            className="euiFormControlLayout__childrenWrapper"
          >
            <div
              className="euiDatePickerRange euiDatePickerRange--inGroup"
            >
              <div
                className="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiSuperDatePicker__startPopoverButton"
              >
                <div
                  className="euiPopover__anchor"
                >
                  <button
                    className="euiDatePopoverButton euiDatePopoverButton--start"
                    data-test-subj="superDatePickerstartDatePopoverButton"
                    disabled={false}
                    onClick={[Function]}
                    title="~ 5 months ago"
                  >
                    ~ 5 months ago
                  </button>
                </div>
              </div>
              <div
                className="euiText euiText--small euiDatePickerRange__delimeter"
              >
                <div
                  className="euiTextColor euiTextColor--subdued"
                  style={Object {}}
                >
                  →
                </div>
              </div>
              <div
                className="euiPopover euiPopover--anchorDownRight euiPopover--displayBlock"
              >
                <div
                  className="euiPopover__anchor"
                >
                  <button
                    className="euiDatePopoverButton euiDatePopoverButton--end"
                    data-test-subj="superDatePickerendDatePopoverButton"
                    disabled={false}
                    onClick={[Function]}
                    title="~ in 7 months"
                  >
                    ~ in 7 months
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            className="euiPopover euiPopover--anchorDownCenter"
          >
            <div
              className="euiPopover__anchor"
            >
              <button
                className="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiAutoRefreshButton euiFormControlLayout__append euiFormControlLayout__append"
                disabled={false}
                onClick={[Function]}
                title="Auto refresh is on and set to 1 second"
                type="button"
              >
                <span
                  className="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    className="euiButtonContent__icon"
                    color="inherit"
                    data-euiicon-type="timeRefresh"
                    size="m"
                  >
                    
                  </span>
                  <span
                    className="euiButtonEmpty__text"
                  >
                    1 s
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots renderers/TimeFilter with commonlyUsedRanges 1`] = `
<div
  style={
    Object {
      "width": "600px",
    }
  }
>
  <div
    className="canvasTimeFilter"
  >
    <div
      className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiSuperDatePicker__flexWrapper euiSuperDatePicker__flexWrapper--noUpdateButton"
    >
      <div
        className="euiFlexItem"
      >
        <div
          className="euiFormControlLayout euiFormControlLayout--group euiSuperDatePicker"
        >
          <div
            className="euiPopover euiPopover--anchorDownLeft"
          >
            <div
              className="euiPopover__anchor euiQuickSelectPopover__anchor"
            >
              <button
                aria-label="Date quick select"
                className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiFormControlLayout__prepend"
                data-test-subj="superDatePickerToggleQuickMenuButton"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                >
                  <span
                    className="euiButtonContent__icon"
                    color="inherit"
                    data-euiicon-type="arrowDown"
                    size="s"
                  >
                    
                  </span>
                  <span
                    className="euiButtonEmpty__text euiQuickSelectPopover__buttonText"
                  >
                    <span
                      data-euiicon-type="calendar"
                    >
                      
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            className="euiFormControlLayout__childrenWrapper"
          >
            <div
              className="euiDatePickerRange euiDatePickerRange--inGroup"
            >
              <button
                className="euiSuperDatePicker__prettyFormat"
                data-test-subj="superDatePickerShowDatesButton"
                disabled={false}
                onClick={[Function]}
              >
                Last 30 days
              </button>
            </div>
          </div>
          <div
            className="euiPopover euiPopover--anchorDownCenter"
          >
            <div
              className="euiPopover__anchor"
            >
              <button
                className="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiAutoRefreshButton euiFormControlLayout__append euiFormControlLayout__append"
                disabled={false}
                onClick={[Function]}
                title="Auto refresh is on and set to 1 second"
                type="button"
              >
                <span
                  className="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    className="euiButtonContent__icon"
                    color="inherit"
                    data-euiicon-type="timeRefresh"
                    size="m"
                  >
                    
                  </span>
                  <span
                    className="euiButtonEmpty__text"
                  >
                    1 s
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots renderers/TimeFilter with dateFormat 1`] = `
<div
  style={
    Object {
      "width": "600px",
    }
  }
>
  <div
    className="canvasTimeFilter"
  >
    <div
      className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiSuperDatePicker__flexWrapper euiSuperDatePicker__flexWrapper--noUpdateButton"
    >
      <div
        className="euiFlexItem"
      >
        <div
          className="euiFormControlLayout euiFormControlLayout--group euiSuperDatePicker"
        >
          <div
            className="euiPopover euiPopover--anchorDownLeft"
          >
            <div
              className="euiPopover__anchor euiQuickSelectPopover__anchor"
            >
              <button
                aria-label="Date quick select"
                className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiFormControlLayout__prepend"
                data-test-subj="superDatePickerToggleQuickMenuButton"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                >
                  <span
                    className="euiButtonContent__icon"
                    color="inherit"
                    data-euiicon-type="arrowDown"
                    size="s"
                  >
                    
                  </span>
                  <span
                    className="euiButtonEmpty__text euiQuickSelectPopover__buttonText"
                  >
                    <span
                      data-euiicon-type="calendar"
                    >
                      
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            className="euiFormControlLayout__childrenWrapper"
          >
            <div
              className="euiDatePickerRange euiDatePickerRange--inGroup"
            >
              <button
                className="euiSuperDatePicker__prettyFormat"
                data-test-subj="superDatePickerShowDatesButton"
                disabled={false}
                onClick={[Function]}
              >
                Last 24 hours
              </button>
            </div>
          </div>
          <div
            className="euiPopover euiPopover--anchorDownCenter"
          >
            <div
              className="euiPopover__anchor"
            >
              <button
                className="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiAutoRefreshButton euiFormControlLayout__append euiFormControlLayout__append"
                disabled={false}
                onClick={[Function]}
                title="Auto refresh is on and set to 1 second"
                type="button"
              >
                <span
                  className="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    className="euiButtonContent__icon"
                    color="inherit"
                    data-euiicon-type="timeRefresh"
                    size="m"
                  >
                    
                  </span>
                  <span
                    className="euiButtonEmpty__text"
                  >
                    1 s
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots renderers/TimeFilter with relative time bounds 1`] = `
<div
  style={
    Object {
      "width": "600px",
    }
  }
>
  <div
    className="canvasTimeFilter"
  >
    <div
      className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiSuperDatePicker__flexWrapper euiSuperDatePicker__flexWrapper--noUpdateButton"
    >
      <div
        className="euiFlexItem"
      >
        <div
          className="euiFormControlLayout euiFormControlLayout--group euiSuperDatePicker"
        >
          <div
            className="euiPopover euiPopover--anchorDownLeft"
          >
            <div
              className="euiPopover__anchor euiQuickSelectPopover__anchor"
            >
              <button
                aria-label="Date quick select"
                className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiFormControlLayout__prepend"
                data-test-subj="superDatePickerToggleQuickMenuButton"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                >
                  <span
                    className="euiButtonContent__icon"
                    color="inherit"
                    data-euiicon-type="arrowDown"
                    size="s"
                  >
                    
                  </span>
                  <span
                    className="euiButtonEmpty__text euiQuickSelectPopover__buttonText"
                  >
                    <span
                      data-euiicon-type="calendar"
                    >
                      
                    </span>
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            className="euiFormControlLayout__childrenWrapper"
          >
            <div
              className="euiDatePickerRange euiDatePickerRange--inGroup"
            >
              <div
                className="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiSuperDatePicker__startPopoverButton"
              >
                <div
                  className="euiPopover__anchor"
                >
                  <button
                    className="euiDatePopoverButton euiDatePopoverButton--start"
                    data-test-subj="superDatePickerstartDatePopoverButton"
                    disabled={false}
                    onClick={[Function]}
                    title="~ 6 days ago"
                  >
                    ~ 6 days ago
                  </button>
                </div>
              </div>
              <div
                className="euiText euiText--small euiDatePickerRange__delimeter"
              >
                <div
                  className="euiTextColor euiTextColor--subdued"
                  style={Object {}}
                >
                  →
                </div>
              </div>
              <div
                className="euiPopover euiPopover--anchorDownRight euiPopover--displayBlock"
              >
                <div
                  className="euiPopover__anchor"
                >
                  <button
                    className="euiDatePopoverButton euiDatePopoverButton--end"
                    data-test-subj="superDatePickerendDatePopoverButton"
                    disabled={false}
                    onClick={[Function]}
                    title="~ in a day"
                  >
                    ~ in a day
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            className="euiPopover euiPopover--anchorDownCenter"
          >
            <div
              className="euiPopover__anchor"
            >
              <button
                className="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiAutoRefreshButton euiFormControlLayout__append euiFormControlLayout__append"
                disabled={false}
                onClick={[Function]}
                title="Auto refresh is on and set to 1 second"
                type="button"
              >
                <span
                  className="euiButtonContent euiButtonEmpty__content"
                >
                  <span
                    className="euiButtonContent__icon"
                    color="inherit"
                    data-euiicon-type="timeRefresh"
                    size="m"
                  >
                    
                  </span>
                  <span
                    className="euiButtonEmpty__text"
                  >
                    1 s
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
